Closed Bug 1546796 Opened 6 years ago Closed 6 years ago

Fix incorrect traffic category

Categories

(Core :: Networking, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: xeonchen, Assigned: xeonchen)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

In bug 1533363 we introduced traffic categories, however, some names and actual categories are inconsistent. We decided to change the names to match the actual categories, which is: swap List Category I & II.

The new table is listed below.

Data Types

Class of Service

Flags Load Type
nsIClassOfService::Leader A
w/o nsIRequest::LOAD_BACKGROUND B
w/ nsIRequest::LOAD_BACKGROUND C

Tracking Category

Category List Category
Analytics/Advertising/Social I
Content II
Fingerprinting III

Telemetry Targets

There are 22 values, denoted by Y for both normal/private browsing mode.

Normal Mode

Y = 0 for first party
Y = 1 for non-listed third party type

Y Type A Type B Type C
Category I 2 3 4
Category II 5 6 7
Category III 8 9 10

Private Mode

Y = 11 for first party
Y = 12 for non-listed third party type

Y Type A Type B Type C
Category I 13 14 15
Category II 16 17 18
Category III 19 20 21
Status: NEW → ASSIGNED
Type: task → defect

(In reply to Gary Chen [:xeonchen] from comment #0)

Besides, during the probing period, there's no Y=[1,12] detected, which is impossible and should be fixed as soon as possible.

It'll be clearer to track this issue in another bug.

Depends on: 1546884
See Also: → 1546903
See Also: → 1546906

The same data is being collected, just organized a different way, so the previous data collection review from bug 1533363 still holds.

Pushed by xeonchen@gmail.com: https://hg.mozilla.org/integration/autoland/rev/4c0f4af919b0 Fix swapped traffic category descriptions; r=dragana
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: