Bug 1546796 - Fix swapped traffic category descriptions; r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D28792